2012-08-29         Arnold D. Robbins     <arnold@skeeve.com>

	Make fts work everywhere by using our own source.

	* README.fts, gawkfts.c, gawkfts.h, fts.3: New files.
	* Makefile.am (filefuncs_la_SOURCES, EXTRA_DIST): Adjust.
	* configure.ac: Remove check for fts.h and fts_XXX functions.
	* filefuncs.c: Remove various ifdefs, change includes around.

2012-08-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: Rename man_MANS to dist_man_MANS to include the man
	pages in the distribution tarball.

2012-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac (AC_SYS_LARGEFILE): Added. Needed for consistency
	with gawk, to get the same size struct stat everywhere.
	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readdir.c, readfile.c,
	revoutput.c, revtwoway.c, rwarray.c, rwarray0.c, testext.c,
	time.c: Move include of config.h to top (or add it!)

2012-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readdir.c, readfile.c,
	revoutput.c, revtwoway.c, rwarray.c, rwarray0.c, testext.c,
	time.c: Add ext_version string.

2012-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* revoutwoway.c: New testing extension for two way processor.
	* Makefile.am: Build revtwoway extension.
	* readdir.c: Fix to fall back to stat if d_type is 'u' and
	do_ftype is one.
	* readdir.3am: Revise doc that some GNU/Linux filesystems
	don't support d_type.

2012-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* revoutput.c: New testing extension for output wrapper.
	* Makefile.am: Build revoutput extension.

2012-08-08         Arnold D. Robbins     <arnold@skeeve.com>

	Add fts() to filefuncs.

	* filefuncs.3am: Update doc.
	* filefuncs.c: Lots of new code.
	* configure.ac: Add checks for appropriate headers and functions.
	* stack.h, stack.c: New files.
	* Makefile.am: Update list of files.

	* readdir.c (dir_can_take_file): Use members in iobuf.