@@ -1,3 +1,9 @@
+2012-08-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* readdir.c: Have three states, 0, 1, 2 for never, fallback, and
+	always.
+	* readdir.3am: Adjust appropriately.
+
 2012-08-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Make fts work everywhere by using our own source.
